[SideBar] Fix text alignment

--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -128,6 +128,7 @@
       .#{$provider-prefix}-sidebar-menu-item-subparent {
         flex-direction: column;
         justify-content: center;
+        text-align: center;
         .#{$provider-prefix}-icon {
           margin-bottom: 5px;
         }
